--- a/heavycenter/src/main/res/layout/frag_main_order.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order.xml
@@ -8,62 +8,62 @@
             type="String" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout
+
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:background="@color/color_block_back"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <com.android.lib.view.title.TitleView
-            android:elevation="2dp"
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/top"
             android:background="@color/color_base"
-            android:id="@+id/title"
-            style_common:iv_left ="@drawable/icon_hv_person"
-            style_common:iv_right ="@drawable/icon_hv_scan"
-            style_common:iv_right2 ="@drawable/icon_hv_add"
-            style_common:txt_mid ="订单"
+            android:elevation="2dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-<RelativeLayout
-    android:background="@color/color_base"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <View
-        android:id="@+id/now"
-        android:background="@drawable/bg_hv_sharp10_gradient_yell_blue"
-        android:layout_width="200dp"
-        android:layout_height="1dp"/>
-</RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <com.siweisoft.heavycenter.module.view.menu.TopTypeView
-            android:id="@+id/topview"
-            style_toptypeview:txts="新订单,进行中,已完成"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-            <LinearLayout
-                android:layout_below="@id/topview"
-                android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <com.android.lib.view.title.TitleView
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:elevation="2dp"
+                android:background="@color/color_base"
+                android:id="@+id/title"
+                style_common:iv_left ="@drawable/icon_hv_person"
+                style_common:iv_right ="@drawable/icon_hv_scan"
+                style_common:iv_right2 ="@drawable/icon_hv_add"
+                style_common:txt_mid ="订单"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"/>
 
+            <View
+                app:layout_constraintTop_toBottomOf="@+id/title"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:id="@+id/now"
+                android:background="@drawable/bg_hv_sharp10_gradient_yell_blue"
+                android:layout_width="200dp"
+                android:layout_height="1dp"/>
 
-                <android.support.v4.view.ViewPager
-                    android:orientation="vertical"
-                    android:id="@+id/ll_cntent"
-                    android:layout_centerInParent="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
-
-            <com.siweisoft.heavycenter.module.view.menu.ScrollMenu
-                android:id="@+id/scrollmenu"
-                android:layout_marginTop="-1.5dp"
-                android:layout_below="@id/topview"
+            <com.siweisoft.heavycenter.module.view.menu.TopTypeView
+                app:layout_constraintTop_toBottomOf="@+id/now"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:id="@+id/topview"
+                style_toptypeview:txts="新订单,进行中,已完成"
                 android:layout_width="match_parent"
-                android:layout_height="3dp"/>
+                android:layout_height="wrap_content"/>
+        </android.support.constraint.ConstraintLayout>
 
-        </RelativeLayout>
-    </LinearLayout>
+        <android.support.v4.view.ViewPager
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/top"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical"
+            android:id="@+id/ll_cntent"
+            android:layout_centerInParent="true"
+            android:layout_width="0dp"
+            android:layout_height="0dp" />
+
+    </android.support.constraint.ConstraintLayout>
 </layout>
