--- a/heavycenter/src/main/res/layout/frag_main_store_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_store_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:style_common="http://schemas.android.com/apk/res-auto"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="frag_main_store_detail"
@@ -9,86 +8,76 @@
         <import type="com.android.lib.util.StringUtil" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_base"
         android:orientation="vertical">
+
         <com.android.lib.view.title.TitleView
-            android:elevation="2dp"
-            android:background="@color/color_base"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/title"
-            style_common:txt_mid ="仓库"
-            style_common:iv_left = "@drawable/icon_hv_back"
-            style_common:iv_right = "@drawable/icon_hv_scan"
-            style_common:iv_right2 = "@drawable/icon_hv_panku"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-            app:srlEnablePureScrollMode="true"
-            app:srlDragRate="0.2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <LinearLayout
-                android:padding="@dimen/dimen_frag_padding"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                      android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/color_base"
+            android:elevation="2dp"
+            app:iv_left="@drawable/icon_hv_back"
+            app:iv_right="@drawable/icon_hv_scan"
+            app:iv_right2="@drawable/icon_hv_panku"
+            app:txt_mid="仓库" />
 
 
-        <LinearLayout
-                android:transitionName="storedetail"
-                android:layout_marginLeft="@dimen/dimen_frag_content_margin"
-                android:layout_marginRight="@dimen/dimen_frag_content_margin"
-                android:layout_marginTop="@dimen/dimen_frag_content_margin"
-                android:layout_marginBottom="@dimen/dimen_frag_content_margin"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:singleLine="true"
-                android:textColor="@color/white"
-                android:textSize="@dimen/dimen_recylce_item_title_txtsize"
-                android:text="@{StringUtil.getStr(frag_main_store_detail.warehouseName)}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_housename"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
+            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:singleLine="true"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+            android:text="@{StringUtil.getStr(frag_main_store_detail.warehouseName)}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-            <TextView
-                android:singleLine="true"
-                android:layout_marginLeft="14dp"
-                android:textColor="@color/white"
-                android:textSize="@dimen/dimen_recylce_item_content_txtsize"
-                android:text="@{StringUtil.getStr(frag_main_store_detail.productName)}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_productName"
+            app:layout_constraintLeft_toRightOf="@+id/tv_housename"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_housename"
+            android:singleLine="true"
+            android:layout_marginLeft="14dp"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+            android:text="@{StringUtil.getStr(frag_main_store_detail.productName)}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-            <TextView
-                android:singleLine="true"
-                android:layout_marginLeft="10dp"
-                android:textColor="@color/white"
-                android:textSize="@dimen/dimen_recylce_item_content_txtsize"
-                android:text="@{StringUtil.getStr(frag_main_store_detail.specifications)}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <View
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="1dp"/>
-
-        </LinearLayout>
-
+        <TextView
+            app:layout_constraintLeft_toRightOf="@+id/tv_productName"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_housename"
+            android:singleLine="true"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+            android:text="@{StringUtil.getStr(frag_main_store_detail.specifications)}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <com.siweisoft.heavycenter.module.view.store.StoreView
+            app:layout_constraintTop_toBottomOf="@+id/tv_housename"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/store"
             android:layout_marginTop="@dimen/dimen_frag_padding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        </LinearLayout>
+
         <LinearLayout
+            android:id="@+id/info"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/store"
             android:background="@color/color_grey_200"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
@@ -108,7 +97,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
                 <TextView
-                        android:singleLine="true"
+                    android:singleLine="true"
                     android:textColor="#f6ab12"
                     android:textSize="28sp"
                     android:text='@{StringUtil.getStr(frag_main_store_detail.todayStorage)+"t"}'
@@ -123,7 +112,7 @@
 
             </LinearLayout>
             <LinearLayout
-                    android:paddingTop="15dp"
+                android:paddingTop="15dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/bg_hv_sharp2_white_solid"
                 android:layout_marginTop="10dp"
@@ -136,7 +125,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
                 <TextView
-                        android:singleLine="true"
+                    android:singleLine="true"
                     android:textColor="#30e5a3"
                     android:textSize="28sp"
                     android:text='@{StringUtil.getStr(frag_main_store_detail.todayOutStorage)+"t"}'
@@ -165,7 +154,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
                 <TextView
-                        android:singleLine="true"
+                    android:singleLine="true"
                     android:textColor="#ff6600"
                     android:textSize="28sp"
                     android:text='@{StringUtil.getStr(frag_main_store_detail.todayProfitNum)+"t"}'
@@ -181,8 +170,10 @@
             </LinearLayout>
         </LinearLayout>
 
-
         <LinearLayout
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/info"
+            android:id="@+id/tip"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -221,10 +212,18 @@
                 android:layout_height="match_parent" />
         </LinearLayout>
 
+
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tip"
+            app:srlDragRate= "0.2"
+            app:srlEnableLoadmoreWhenContentNotFull="false"
+            app:srlEnableOverScrollBounce="false"
             android:id="@+id/refresh"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="0dp"
+            android:layout_height="0dp">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycle"
@@ -237,7 +236,7 @@
 
         </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
-    </LinearLayout>
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-    </LinearLayout>
+
+
+    </android.support.constraint.ConstraintLayout>
 </layout>
