--- a/heavycenter/src/main/res/layout/item_main_trans3.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans3.xml
@@ -50,7 +50,7 @@
                 <TextView
                     android:maxWidth="100dp"
                     android:singleLine="true"
-                    android:id="@+id/tv_planNumber"
+                    android:id="@+id/tv_totalnum"
                     android:text="3t"
                     android:textSize="25sp"
                     android:textColor="@color/color_yell_blue"
