--- a/heavycenter/src/main/res/layout/item_myce_unit_bind.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_bind.xml
@@ -12,7 +12,7 @@
         android:foreground="?android:attr/selectableItemBackground"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="65dp">
 
         <ImageView
             app:layout_constraintTop_toTopOf="parent"
@@ -26,6 +26,7 @@
 
 
         <TextView
+            android:includeFontPadding="false"
             android:gravity="bottom"
             android:layout_marginLeft="15dp"
             app:layout_constraintBottom_toBottomOf="@+id/iv_sel"
@@ -38,6 +39,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:layout_marginTop="3dp"
             android:gravity="bottom"
             app:layout_constraintTop_toBottomOf="@+id/tv_com_name"
             app:layout_constraintLeft_toLeftOf="@+id/tv_com_name"
@@ -49,8 +51,7 @@
             android:layout_height="wrap_content" />
 
         <View
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_mana_name"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
             android:id="@+id/divide"
